--- a/multicluster/pkg/test/expose-binding/reviews-exposure-both.yaml
+++ b/multicluster/pkg/test/expose-binding/reviews-exposure-both.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   exposed:
   - name: reviews
+    port: 9080
 ---
 # Expose the "reviews" service, subset v1 only, only to cluster1, with alternate name
 apiVersion: multicluster.istio.io/v1alpha1
@@ -15,6 +16,7 @@ metadata:
 spec:
   exposed:
   - name: reviews
+    port: 9080
     alias: reviews-v1
     subset: v1
     clusters:
