--- a/multicluster/pkg/test/expose-binding/reviews-binding.yaml
+++ b/multicluster/pkg/test/expose-binding/reviews-binding.yaml
@@ -1,4 +1,4 @@
-# Consume reviews, any version, from cluster2
+# Like 'reviews-binding.yaml', but with an explicit namespace
 apiVersion: multicluster.istio.io/v1alpha1
 kind: RemoteServiceBinding
 metadata:
