Add port numbers to example

--- a/multicluster/pkg/test/expose-binding/reviews-exposure-v1-v2.yaml
+++ b/multicluster/pkg/test/expose-binding/reviews-exposure-v1-v2.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   exposed:
   - name: reviews
+    port: 9080
 ---
 # Expose the "reviews" service, subset v1 only, only to cluster1, with alternate name
 apiVersion: multicluster.istio.io/v1alpha1
@@ -15,12 +16,13 @@ metadata:
 spec:
   exposed:
   - name: reviews
+    port: 9080
     alias: reviews-v1
     subset: v1
     clusters:
     - cluster1
 ---
-# Expose the "reviews" service, subset v1 only, only to cluster1, with alternate name
+# Expose the "reviews" service, subset v2 only, only to cluster1, with alternate name
 apiVersion: multicluster.istio.io/v1alpha1
 kind: ServiceExpositionPolicy
 metadata:
@@ -28,6 +30,7 @@ metadata:
 spec:
   exposed:
   - name: reviews
+    port: 9080
     alias: reviews-v2
     subset: v2
     clusters:
