Suggestion for how to handle multi-port Services

--- a/multicluster/pkg/test/expose-binding/multi-port-exposure.yaml
+++ b/multicluster/pkg/test/expose-binding/multi-port-exposure.yaml
@@ -6,7 +6,13 @@ metadata:
 spec:
   exposed:
   - name: my-service
-    ports:
-    - 80 # Required, because without this it would be ambiguous
+    port:
+    - 80
+    clusters:
+    - acceptor-cluster-1
+  - name: my-service
+    alias: my-service-https
+    port:
+    - 443
     clusters:
     - acceptor-cluster-1
