Dockerfile for the agent and make targets to build/push it

--- a/multicluster/Makefile
+++ b/multicluster/Makefile
@@ -4,6 +4,10 @@
 # disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
 # Copyright 2018 IBM Corporation
 
+# Docker image and hub parameters. Replace with a vaild repository.
+DOCKER_REPO=docker.io/mc
+IMAGE_TAG:=develop
+
 # Go parameters
 GOCMD=go
 GOBUILD=$(GOCMD) build
@@ -14,3 +18,15 @@ all: test
 
 test: 
 	$(GOTEST) -v ./...
+
+clean:
+	$(GOCMD) clean
+	rm -rf ./build
+
+build:
+	mkdir -p ./build/docker
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ./build/docker/mcagent $(LDFLAGS) -ldflags "-X main.version=$(IMAGE_TAG)" ./cmd/mc-agent
+	docker build -t $(DOCKER_REPO)/mcagent:$(IMAGE_TAG) -f mcagent.Dockerfile ./build/docker
+	
+push:
+	docker push $(DOCKER_REPO)/mcagent:$(IMAGE_TAG)
