--- a/multicluster/pkg/test/expose-binding/reviews-binding-v1-only.yaml
+++ b/multicluster/pkg/test/expose-binding/reviews-binding-v1-only.yaml
@@ -1,4 +1,4 @@
-# Consume reviews, any version, from cluster2
+# Consume reviews-v1, from cluster2
 apiVersion: multicluster.istio.io/v1alpha1
 kind: RemoteServiceBinding
 metadata:
