--- a/docs/install/deploy.yaml
+++ b/docs/install/deploy.yaml
@@ -35,7 +35,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: multi-cluster-agent-service-account
-  namespace: default
+  namespace: istio-system
   labels:
     istio: multi-cluster-agent
 ---
@@ -43,7 +43,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   name: multi-cluster-agent
-  namespace: default
+  namespace: istio-system
   labels:
     istio: multi-cluster-agent
 rules:
@@ -70,6 +70,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   name: multi-cluster-agent-role-binding
+  namespace: istio-system
   labels:
     istio: multi-cluster-agent
 roleRef:
@@ -79,7 +80,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name:  multi-cluster-agent-service-account
-    namespace: default
+    namespace: istio-system
 ---
 
 # Add the Multi-Cluster service
@@ -90,15 +91,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mc-agent
-  namespace: default
+  namespace: istio-system
   labels:
     istio: multi-cluster-agent
 spec:
-  type: LoadBalancer
   ports:
-  - port: 80
+  - port: 8999
     name: http
-    targetPort: 8999
   selector:
     istio: multi-cluster-agent
 ---
@@ -106,7 +105,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: mc-agent
-  namespace: default
+  namespace: istio-system
   labels:
     istio: multi-cluster-agent
 spec:
@@ -139,3 +138,58 @@ spec:
       - name: config
         configMap:
           name: mc-configuration
+---
+
+# Create routing from the Istio default ingress gateway to the agent.
+# Agent is not injected therefore not part of the mesh.
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
+  name: mc-agent
+  namespace: istio-system
+spec:
+  hosts:
+  - mc-agent.istio-system.svc.cluster.local
+  location: MESH_EXTERNAL
+  ports:
+  - number: 8999
+    name: http
+    protocol: HTTP
+  resolution: NONE
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: mc-gateway
+  namespace: istio-system
+spec:
+  selector:
+    istio: ingressgateway # use istio default controller
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: mc-agent
+  namespace: istio-system
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - mc-gateway
+  http:
+  - match:
+    - uri:
+        prefix: /exposed
+    route:
+    - destination:
+        host: mc-agent.istio-system.svc.cluster.local
+        port:
+          number: 8999
