Remove the JSON configuration support to cleanup code and stay with YAML only

--- a/docs/install/deploy.yaml
+++ b/docs/install/deploy.yaml
@@ -128,7 +128,7 @@ spec:
           ports:
           - containerPort: 8999
           args:
-          - --configYaml
+          - --config
           - /etc/config/config.yaml
           volumeMounts:
           - name: config
