--- a/multicluster/pkg/test/mc-agent/cluster_b_listens_cd.yaml
+++ b/multicluster/pkg/test/mc-agent/cluster_b_listens_cd.yaml
@@ -1,16 +1,16 @@
-ID: cluster1
+ID: cluster-b
 GatewayIP: 127.0.0.1
 GatewayPort: 80
 AgentPort: 8998
 TrustedPeers: []
 WatchedPeers:
-- ID: cluster2
-  GatewayIP: 169.62.129.93
+- ID: cluster-c
+  GatewayIP: 1.2.3.4
   GatewayPort: 80
   AgentIP: localhost
   AgentPort: 8999
-- ID: clusterC
-  GatewayIP: 1.2.3.4
+- ID: cluster-d
+  GatewayIP: 1.2.3.5
   GatewayPort: 80
   AgentIP: localhost
   AgentPort: 8997
