--- a/docs/install/deploy.yaml
+++ b/docs/install/deploy.yaml
@@ -64,7 +64,7 @@ rules:
   verbs: ["list", "watch"]
 - apiGroups: [""]
   resources: ["services"]
-  verbs: ["list", "watch", "create", "delete"]
+  verbs: ["list", "watch", "create", "delete", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
