--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ multicluster/pkg/test/cli-tool/*.yaml
 
 # Binaries we build
 multicluster/cmd/mc-tool/mc-tool
+multicluster/build/mc-tool
 multicluster/build/docker/mcagent
 
 # Logs we generate
